<resources>
    <string name="app_name">Rehab</string>


    <string name="title_activity_login2">Sign in</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_back">Back</string>


    <string name="error_field_mismatch">Password mismatch</string>
    <string name="prompt_passwordConfirm">Re-enter Password</string>
    <string name="error_field_required">This field is required</string>
</resources>
